@@ -26,7 +26,7 @@ public class MinGroupOperation implements GroupOperation {
         if (Double.compare(d, Double.MAX_VALUE) == 0) {
             return null;
         }
-        return new Double(d);
+        return Double.valueOf(d);
     }
 
     /**
